--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
+  "name": "nodejs_mongodb",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "devStart": "nodemon server.js"
+  },
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "nodemon": "^2.0.15",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
