--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "marked": "^4.0.10",
     "mongoose": "^6.1.6",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
