--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dompurify": "^2.3.4",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "http": "^0.0.1-security",
     "jsdom": "^19.0.0",
     "marked": "^4.0.10",
     "method-override": "^3.0.0",
