--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devStart": "nodemon server.js"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "dompurify": "^2.3.4",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
