--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dompurify": "^2.3.4",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "http": "^0.0.1-security",
     "jsdom": "^19.0.0",
     "marked": "^4.0.10",
