--- a/design/package.json
+++ b/design/package.json
@@ -15,6 +15,7 @@
     "react-native": "^0.67.1",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
